feat: add auth to swagger doc
