# src/Controller/CustomerController.php
@@ -35,6 +35,7 @@ class CustomerController extends AbstractController
      * @Route("/customer/add", name="add_customer", methods={"POST"})
      * @OA\Post(
      *     path="/customer/add",
+     *     security={{"bearerAuth":{}}},
      *     @OA\RequestBody(ref="#/components/requestBodies/customerAdd"),
      *     @OA\Response(
      *      response="200",
@@ -55,7 +56,8 @@ class CustomerController extends AbstractController
     /**
      * @Route("/customer/delete/{id}", name="delete_customer", methods={"DELETE"}, requirements={"id"="\d+"})
      * @OA\Delete (
-     *     path="/customer/delete{id}",
+     *     path="/customer/delete/{id}",
+     *     security={{"bearerAuth":{}}},
      *     @OA\Parameter(
      *      name="id",
      *      in="path",
@@ -67,7 +69,17 @@ class CustomerController extends AbstractController
      *      response="200",
      *      description="Delete a customer",
      *     @OA\JsonContent(example="The customer has been deleted")
-     * )
+     * ),
+     * @OA\Response(
+     *      response="404",
+     *      description="Customer not found",
+     *     @OA\JsonContent(example="The customer hasn't been found")
+     * ),
+     * @OA\Response(
+     *      response="500",
+     *      description="Customer owner right",
+     *     @OA\JsonContent(example="You can't delete this customer")
+     * ),
      * )
      *
      * @throws \Exception
@@ -85,17 +97,23 @@ class CustomerController extends AbstractController
      * @Route("/customer/{id}", name="get_customer", methods={"GET"}, requirements={"id"="\d+"})
      * @OA\Get(
      *     path="/customer/{id}",
+     *     security={{"bearerAuth":{}}},
      *     @OA\Parameter(
      *      name="id",
      *      in="path",
      *      description="The id of the customer",
-     *      required=true
+     *      required=true,
      *     ),
      *     @OA\Schema(ref="#/components/parameters/id"),
      *     @OA\Response(
      *      response="200",
      *      description="Customer detail",
      *     @OA\JsonContent(ref="#/components/schemas/Customer")
+     * ),
+     *     @OA\Response(
+     *      response="404",
+     *      description="Customer not found",
+     *     @OA\JsonContent(example="The customer hasn't been found")
      * )
      * )
      *
@@ -115,6 +133,7 @@ class CustomerController extends AbstractController
      * @Route("/customers", name="get_customers", methods={"GET"})
      * @OA\Get(
      *     path="/customers",
+     *     security={{"bearerAuth":{}}},
      *     @OA\Parameter(
      *      name="id",
      *      in="query",
@@ -133,7 +152,12 @@ class CustomerController extends AbstractController
      *      response="200",
      *      description="Product detail",
      *     @OA\JsonContent(type="array", @OA\Items(ref="#/components/schemas/Customer"))
-     * )
+     * ),
+     *     @OA\Response(
+     *      response="404",
+     *      description="Customer not found",
+     *     @OA\JsonContent(example="The client hasn't been found")
+     * ),
      * )
      *
      * @throws \Symfony\Component\Serializer\Exception\ExceptionInterface
