# src/DTO/SecuritySchemes.php
@@ -1,0 +1,18 @@
+<?php
+
+namespace App\DTO;
+
+use OpenApi\Annotations as OA;
+
+/**
+ * @OA\SecurityScheme(
+ *      in="header",
+ *      name="Authorization",
+ *      securityScheme="bearerAuth",
+ *      type="http",
+ *      scheme="bearer"
+ * )
+ */
+class SecuritySchemes
+{
+}
